--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.3.0</version>
@@ -62,8 +67,6 @@
 			<scope>runtime</scope><!-- -->
 			<optional>true</optional>
 		</dependency>
-
-
 	</dependencies>
 
 	<build>
