--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<scope>runtime</scope><!-- -->
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
