--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Enable HTTP methods PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework.security=DEBUG
